# file-separator

./: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh  test.sh
include/: file_utils.h
src/: file_utils.cpp  main.cpp
test_src/: file_generator.cpp
